--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  
     <title>ae</title>
    <style>
         body {
@@ -33,9 +38,13 @@
             border-radius: 8px;
             border: 1px solid #ccc;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+            font-family: "Gentium Plus", serif;
+            font-weight: 400;
+            font-style: normal;
         }
         textarea {
-            width: 100%;
+            width: calc(100% - 25px);
             height: 200px;
             padding: 10px;
             font-size: 16px;
@@ -47,7 +56,7 @@
         .output-text {
             min-height: 200px;
             padding: 10px;
-            font-size: 16px;
+            font-size: 24px;
             white-space: pre-wrap;
             word-wrap: break-word;
             background-color: #f0f0f0;
@@ -77,19 +86,23 @@
             Ë: "̈", // Kombinimi i dierezës
             I: "̇", // Kombinimi i pikës sipër
             O: "̊", // Kombinimi i unazës sipër
-            U: "̆", // Kombinimi i breves
-            Y: "̌"  // Kombinimi i karonit
-            // U: "̃",
+            // U: "̆", // Kombinimi i breves
+            Y: "̌",  // Kombinimi i karonit
+            U: "̃",
         };
 
         // Zëvendësimi i SH me Ƨ dhe RR me Я
         function replaceSHandRR(word) {
-            return word.replace(/Sh|SH|sh|sH/g, "Ƨ")
-                       .replace(/Rr|RR|rR|rr/g, "Я")
-                       .replace(/Ç|ç/g, "Ɔ")
-                       .replace(/ZH|Zh|zh|zH/g, "З")
-                       .replace(/Th|TH|th|tH/g, "θ")
-                       .replace(/Ll|LL|lL|ll/g, "⅃");
+            // Convert all input to uppercase
+            word = word.toUpperCase();
+
+            // Perform replacements
+            return word.replace(/SH/g, "Ƨ")
+                    .replace(/RR/g, "Я")
+                    .replace(/Ç/g, "Ɔ")
+                    .replace(/ZH/g, "З")
+                    .replace(/TH/g, "θ")
+                    .replace(/LL/g, "⅃");
         }
 
         // Funksioni për ndarjen e rrokjeve
@@ -115,7 +128,7 @@
             return sentence
                 .split(/(\s+|[,.!?;:()"'’-])/g) // Ndaj sipas fjalëve dhe shenjave të pikësimit
                 .map(part => {
-                    if (/^[A-Za-zËëÇç]+$/.test(part)) {
+                    if (/^[A-Za-zËëÇçθЗ]+$/.test(part)) {
                         // Nëse është fjalë, ktheje në alfabetin Evropian
                         return convertToEuropeanAlphabet(part);
                     }
